fixed nav on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -25,15 +25,14 @@
 .navbar {
   background-color: var(--main_bg_color);  
 }
-#collapsibleNavbar {
-  position: absolute;
-  right: 10px;
-}
 #nav_name {
   color: var(--light_text_color);
 }
 #nav_name_mobile {
   display: none;
+}
+.nav-item {
+  margin-right: 15px;
 }
 .nav-link {
   color: #0acfb1d8;
@@ -52,10 +51,10 @@
 	bottom: 3px;
 	transition: all 0.4s ease-in-out;
 }
-.active {
+.navbar-nav .nav-link.active {
   color: var(--accent_color); 
 }
-.active::after {
+.navbar-nav .nav-link.active::after {
   position: absolute;
 	content: "";
 	width: 100%;
@@ -64,6 +63,7 @@
 	left: 0;
 	bottom: 3px;
 }
+
 #Home {
   background-color: var(--main_bg_color);  
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
@@ -501,15 +501,27 @@
   #nav_name {
     display: none;
   }
+  .nav-link {
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 10px;
+  }
+  
+
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   #my_name {
     font-size: 30px;
   }
   #hello_text {
     font-size: 30px;
   }
+  #my_titles {
+  }
+  
   
 }  
 }
